p3/confs/dev/workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
  namespace: dev
  labels:
    app: playground
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: playground.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-service
            port:
              number: 8888
